crates/cockpitctl-sarif/tests/snapshots/snapshot_tests__single_sensor_sarif.snap
---
source: crates/cockpitctl-sarif/tests/snapshot_tests.rs
expression: sarif
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "cockpitctl",
          "version": "0.3.0",
          "rules": [
            {
              "id": "E0308",
              "shortDescription": {
                "text": "[builddiag] E0308"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "E0308",
          "level": "error",
          "message": {
            "text": "mismatched types: expected bool, found i32"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/main.rs"
                },
                "region": {
                  "startLine": 10,
                  "startColumn": 5
                }
              }
            }
          ],
          "fingerprints": {
            "cockpitctl/v1": "fp_single"
          }
        }
      ]
    }
  ]
}
