crates/cockpitctl-sarif/tests/snapshots/snapshot_tests__typical_cockpit_report.snap
---
source: crates/cockpitctl-sarif/tests/snapshot_tests.rs
expression: sarif
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "cockpitctl",
          "version": "0.3.0",
          "rules": [
            {
              "id": "clippy::todo",
              "shortDescription": {
                "text": "[clippy] clippy::todo"
              }
            },
            {
              "id": "clippy::unwrap_used",
              "shortDescription": {
                "text": "[clippy] clippy::unwrap_used"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "clippy::unwrap_used",
          "level": "error",
          "message": {
            "text": "used `unwrap()` on a Result value"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/main.rs"
                },
                "region": {
                  "startLine": 42,
                  "startColumn": 10
                }
              }
            }
          ],
          "fingerprints": {
            "cockpitctl/v1": "fp_abc123"
          }
        },
        {
          "ruleId": "clippy::todo",
          "level": "warning",
          "message": {
            "text": "TODO found"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/lib.rs"
                },
                "region": {
                  "startLine": 10
                }
              }
            }
          ]
        }
      ]
    }
  ]
}
